Horizontal Scroll Fix

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,6 @@
 .footer {
   padding-top: 40px;
+  box-sizing: border-box;
 }
 
 .footer__copyright {
