--- a/pages/index.css
+++ b/pages/index.css
@@ -13,8 +13,3 @@
 @import url(../blocks/card.css);
 
 @import url(../blocks/footer.css);
-
-/*
-* {
-  border: 1px solid red;
-} */
